--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^27.4.7"
   },
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^11.0.0",
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.3"
