--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "console.table": "^0.10.0",
     "dotenv": "^11.0.0",
     "inquirer": "^8.2.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "mysql2-promise": "^0.1.4"
   }
 }
